--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             </div>
             <div class="inner-menu">
                 <ul>
-                    <a href="@" target="_blank">
+                    <a href="#" target="_blank">
                         <li>Trang Chủ</li>
                     </a>
-                    <a href="@" target="_blank">
+                    <a href="#" target="_blank">
                         <li>Giới thiệu</li>
                     </a>
-                    <a href="@" target="_blank">
+                    <a href="#" target="_blank">
                         <li>Thiết bị</li>
                     </a>
-                    <a href="@" target="_blank">
+                    <a href="#" target="_blank">
                         <li>Liên lạc</li>
                     </a>
                 </ul>
@@ -41,9 +41,9 @@
             <div class="inner-social">
                 <ul>
 
-                    <li><a href="@" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="@" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="@" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
 
                 </ul>
             </div>
@@ -61,8 +61,8 @@
                         nulla.</p>
                 </div>
                 <div class="inner-buttons">
-                    <a href="@" target="_blank" class="button button-one">Dịch vụ của chúng tôi</a>
-                    <a href="@" target="_blank" class="button button-two">Tìm hiểu thêm</a>
+                    <a href="#" target="_blank" class="button button-one">Dịch vụ của chúng tôi</a>
+                    <a href="#" target="_blank" class="button button-two">Tìm hiểu thêm</a>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                     </div>
                     <p class="inner-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accumsan porttitor
                         egestas fermentum nulla.</p>
-                    <a href="@" target="_blank" class="button button-one">Tìm hiểu thêm</a>
+                    <a href="#" target="_blank" class="button button-one">Tìm hiểu thêm</a>
                 </div>
             </div>
         </div>
